--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="d-flex flex-column col-3 pt-2 container-search">
         <h2>Search for a City:</h2>
         <form class="d-flex flex-column align-items-center">
-          <input class="form-ctonrol rounded w-75 p-2" placeholder="City Name">
+          <input id="city-name" class="form-ctonrol rounded w-75 p-2" placeholder="City, State/Country">
           <button id="button-search" class="btn btn-primary w-75 rounded mx-2 mt-3">Search</button>
         </form>
 
