implement showing current day's weather

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
         </ul>
       </div>
 
-
-      <div class="d-flex flex-column col-9 px-3 container-weather">
-        <div id="city-info" class="card p-2 mt-2">
-          <h2>City Name (current date) <i>icon</i></h2>
+      <div id="city-info" class="d-flex flex-column col-9 px-3 container-weather">
+        <div class="card p-2 mt-2">
+          <h2>City Name (current date) <img src='https://openweathermap.org/img/wn/01n.png'></h2>
           <p>temp</p>
           <p>wind</p>
           <p>humidity</p>
