implement saving and displaying searched cities

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <div class="d-flex flex-column col-3 pt-2 container-search">
         <h2>Search for a City:</h2>
         <form class="d-flex flex-column align-items-center">
-          <input id="city-name" class="form-ctonrol rounded w-75 p-2" placeholder="City">
-          <button id="button-search" class="btn btn-primary w-75 rounded mx-2 mt-3">Search</button>
+          <input id="city-name" class="form-control w-75 p-2" placeholder="City">
+          <button id="button-search" class="btn btn-primary w-75 mx-2 mt-3">Search</button>
         </form>
 
         <hr class="m-3">
 
         <ul id="search-history" class="d-flex flex-column align-items-center p-0">
-          <li class="card w-75 text-center bg-secondary text-light p-1">hello</li>
+          <!-- <li class="card w-75 text-center bg-secondary text-light p-1">hello</li> -->
         </ul>
       </div>
 
